# PortalDeNoticias

./: .gitignore  DOC.MD  README.MD  README.md  dev.docker-compose.yaml  local.docker-compose.yaml  prod.Dockerfile  prod.docker-compose.yaml
assets/doc/: API.puml  ClassDiagram.puml  ERD.puml  ForgotPasswordFlow.puml  LoginFlow.puml  Logout.puml  NoticeDetail.puml  NoticesByCategory.puml  SignupFlow.puml  UseCaseDiagram.puml  ViewNotice.puml
backend/: .env.example  .gitignore  dev.Dockerfile  main.py  prod.Dockerfile  pyproject.toml
backend/config/: db.py  settings.py
backend/controller/: auth_controller.py  news_controller.py  user_controller.py
backend/middleware/: auth_middleware.py
backend/models/: user_model.py
backend/routes/: auth_router.py  news_router.py  user_router.py
backend/schemas/: auth_schema.py  news_schema.py  user_schema.py  utils_schema.py
backend/services/: auth_service.py
frontend/: .dockerignore  .env.example  .gitignore  nginx.conf  package-lock.json  package.json  prod.Dockerfile
frontend/src/: App.tsx  Router.tsx  main.tsx
frontend/src/components/: app-header.tsx  app-sidebar.tsx  button-social-facebook.tsx  button-social-google.tsx
frontend/src/components/auht/: ProtectedRoute.tsx  PublicRoute.tsx
frontend/src/components/news/: new-card-skeleton.tsx  new-card.tsx  news-detail-skeleton.tsx  news-detail.tsx  news-related-skeleton.tsx  news-related.tsx
frontend/src/config/: app.ts  menu.ts
frontend/src/pages/: HomePage.tsx
frontend/src/pages/auth/: AuthSocialCallbackPage.tsx  ForgetPassword.tsx  LoginPage.tsx  (+2 more)
frontend/src/schema/: auth.schema.ts
frontend/src/store/: useAuthStore.ts
frontend/src/types/: news.types.ts
(+2 files in other folders)
