[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend FastAPI"
authors = ["Alex Méndez <alex.mendez.lopez@outlook.com>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.121.1"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.44"
psycopg2-binary = "^2.9.11"
pydantic = "^2.12.4"
pydantic-settings = "^2.11.0"
python-dotenv = "^1.2.1"
email-validator = "^2.3.0"
passlib = {extras = ["argon2"], version = "^1.7.4"}
httpx = "^0.28.1"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
requests = "^2.32.5"
authlib = "^1.6.5"
itsdangerous = "^2.2.0"

[poetry.group.dev.dependencies]
# aquí puedes agregar dependencias de desarrollo más adelante, ejemplo:
# pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
